Minor fixes to tests. Not using them though

--- a/test/fixtures/differentials.yml
+++ b/test/fixtures/differentials.yml
@@ -2,8 +2,8 @@
 
 one:
   illness_id: 1
-  diff_id: MyString
+  differential_id: MyString
 
 two:
   illness_id: 1
-  diff_id: MyString
+  differential_id: MyString
