--- a/test/fixtures/illnesses.yml
+++ b/test/fixtures/illnesses.yml
@@ -1,17 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  etiology: MyText
-  patogenesis: MyText
+  etio_and_pato: MyText
   incidence: 1
-  prevalence: 1
   category: MyString
-  anamnesis: MyText
 
 two:
-  etiology: MyText
-  patogenesis: MyText
+  etio_and_pato: MyText
   incidence: 1
-  prevalence: 1
   category: MyString
-  anamnesis: MyText
